RESOLVED FIXED13909
SVG text selection doesn't work with RTL text
https://bugs.webkit.org/show_bug.cgi?id=13909
Summary SVG text selection doesn't work with RTL text
Nikolas Zimmermann
Reported 2007-05-29 14:04:12 PDT
Naturual behaviour of RTL text selection is broken in the new SVG text engine. It never worked perfectly - now it's time to fix it for real.
Attachments
Initial patch (27.18 KB, patch)
2007-08-07 15:22 PDT, Nikolas Zimmermann
oliver: review+
New test results (150.68 KB, patch)
2007-08-07 15:28 PDT, Nikolas Zimmermann
oliver: review+
Nikolas Zimmermann
Comment 1 2007-08-07 15:22:36 PDT
Created attachment 15858 [details] Initial patch This introduces SVG RTL & BiDi text selection in feature-branch.
Nikolas Zimmermann
Comment 2 2007-08-07 15:28:46 PDT
Created attachment 15859 [details] New test results LayoutTests/ changes.
Oliver Hunt
Comment 3 2007-08-07 15:49:52 PDT
Comment on attachment 15858 [details] Initial patch I would prefer it if int offset = !textBox->m_reversed ? textBox->start() + i : textBox->end() - i; was instead int offset = textBox->m_reversed ? textBox->end() - i : textBox->start() + i;
Oliver Hunt
Comment 4 2007-08-07 16:09:34 PDT
Comment on attachment 15859 [details] New test results Layout tests seem fine
Nikolas Zimmermann
Comment 5 2007-08-07 16:14:28 PDT
Landed in r24916.
Note You need to log in before you can comment on or make changes to this bug.