WebCore/rendering/SVGInlineTextBox.h
@@ -47,8 +47,12 @@ namespace WebCore {
         virtual IntRect selectionRect(int absx, int absy, int startPos, int endPos);
 
         SVGRootInlineBox* svgRootInlineBox() const;
- 
-    protected:
+
+        // Helper functions shared with SVGRootInlineBox     
+        float calculateGlyphWidth(RenderStyle*, int offset) const;
+        float calculateGlyphHeight(RenderStyle*, int offset) const;
+
+    private:
         friend class RenderSVGInlineText;
         bool svgCharacterHitsPosition(int x, int y, int& offset) const;
 
